--- a/MVCApp/Web.config
+++ b/MVCApp/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="MVCDemoDB" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=MVCDemoDB;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" />    
+    <add name="MVCDemoDB" connectionString="Data Source=(localdb)\ProjectsV13;Initial Catalog=MVCDemoDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" />    
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
